# hellinger-imbalance-benchmarks

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
configs/: README.md
configs/experiments/: neural_mlp_allocation_geometry.yaml  neural_mlp_objective_perturbation.yaml  synthetic_smoke.yaml
configs/metrics/: core_imbalance.yaml
configs/models/: boosted_trees.yaml  class_weighted_trees.yaml  hddt_ensembles.yaml  neural_mlp_allocation_geometry.yaml  (+2 more)
data/: README.md
drafts/: initial_manuscript.md  initial_manuscript_v2.md
openspec/: project.md
paper/: figure_inventory.md  manuscript_outline.md
research/: README.md  backlog.md  claim_audit_report.md  claim_inventory.md  operational_morphology_framework.md  study_journal.md  terminology.md
scripts/: README.md  analyze_threshold_elasticity.py  diagnose_lightgbm_weighting.py  extract_legacy_hddt_datasets.py  generate_posterior_occupancy_figures.py  plot_threshold_response.py  plot_threshold_trajectories.py  profile_legacy_hddt_datasets.py  run_allocation_concentration.py  run_calibration_interaction_study.py  run_legacy_hddt_benchmark.py  run_legacy_threshold_sweep.py  run_prediction_space_occupancy.py  run_score_analysis.py  run_score_plots.py  run_score_separation.py  run_synthetic_smoke.py  run_threshold_sweep.py  snapshot_research_artifacts.py  summarize_allocation_regimes.py  summarize_paper_synthesis.py  summarize_results.py
tests/: test_allocation.py  test_arrays.py  test_artifacts.py  test_calibration_study.py  test_config_loading.py  test_dataset_profile.py  test_diagnostics.py  test_elasticity.py  test_legacy_benchmark_runner.py  test_legacy_datasets.py  test_legacy_threshold_sweep.py  test_lightgbm_feature_name_warning.py  test_metrics.py  test_models.py  test_occupancy.py  test_occupancy_figures.py  test_plots.py  test_regimes.py  test_reporting.py  test_runner.py  test_scores.py  test_separation.py  test_splits.py  test_synthesis.py  test_synthetic.py  test_threshold_plots.py  test_threshold_trajectories.py  test_thresholds.py
(+123 files in other folders)
